11712702-project2/test/test_11712702_9.out
Error type 12 at Line 6: array indexing with non-integer value
Error type 8 at Line 6: incompatiable return type
