11712702-project2/test/test_11712702_9.spl
int test_11712702_9(int a[2], int b)
{
  char c = 'c';
  if (a[0] > b)
  {
    return a[c];
  }
  else
  {
    return b;
  }
}
